feat(contestants): add week 3 eliminations

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                   <div class="fullWidth__column">
                     <section>
                       <div
-                        style="justify-content: center;"
+                        style="justify-content: center"
                         class="
                           tilegroup
                           tilegroup--castlist
@@ -1419,6 +1419,21 @@
                                   class="RatioFrame aspect-ratio--16x9"
                                 ></div>
                                 <div class="Image__Wrapper aspect-ratio--child">
+                                  <div
+                                    class="overlay"
+                                    style="
+                                      position: absolute;
+                                      top: 0;
+                                      bottom: 0;
+                                      right: 0;
+                                      left: 0;
+                                      /* height: 100%; */
+                                      /* width: 100%; */
+                                      /* border-radius: 50%; */
+                                      background-color: rgb(255 0 0 / 50%);
+                                      z-index: 2;
+                                    "
+                                  ></div>
                                   <picture
                                     ><source
                                       srcset="
@@ -1784,6 +1799,21 @@
                                   class="RatioFrame aspect-ratio--16x9"
                                 ></div>
                                 <div class="Image__Wrapper aspect-ratio--child">
+                                  <div
+                                    class="overlay"
+                                    style="
+                                      position: absolute;
+                                      top: 0;
+                                      bottom: 0;
+                                      right: 0;
+                                      left: 0;
+                                      /* height: 100%; */
+                                      /* width: 100%; */
+                                      /* border-radius: 50%; */
+                                      background-color: rgb(255 0 0 / 50%);
+                                      z-index: 2;
+                                    "
+                                  ></div>
                                   <picture
                                     ><source
                                       srcset="
@@ -1994,6 +2024,21 @@
                                   class="RatioFrame aspect-ratio--16x9"
                                 ></div>
                                 <div class="Image__Wrapper aspect-ratio--child">
+                                  <div
+                                    class="overlay"
+                                    style="
+                                      position: absolute;
+                                      top: 0;
+                                      bottom: 0;
+                                      right: 0;
+                                      left: 0;
+                                      /* height: 100%; */
+                                      /* width: 100%; */
+                                      /* border-radius: 50%; */
+                                      background-color: rgb(255 0 0 / 50%);
+                                      z-index: 2;
+                                    "
+                                  ></div>
                                   <picture
                                     ><source
                                       srcset="
@@ -2064,6 +2109,21 @@
                                   class="RatioFrame aspect-ratio--16x9"
                                 ></div>
                                 <div class="Image__Wrapper aspect-ratio--child">
+                                  <div
+                                    class="overlay"
+                                    style="
+                                      position: absolute;
+                                      top: 0;
+                                      bottom: 0;
+                                      right: 0;
+                                      left: 0;
+                                      /* height: 100%; */
+                                      /* width: 100%; */
+                                      /* border-radius: 50%; */
+                                      background-color: rgb(255 0 0 / 50%);
+                                      z-index: 2;
+                                    "
+                                  ></div>
                                   <picture
                                     ><source
                                       srcset="
@@ -2604,6 +2664,21 @@
                                   class="RatioFrame aspect-ratio--16x9"
                                 ></div>
                                 <div class="Image__Wrapper aspect-ratio--child">
+                                  <div
+                                    class="overlay"
+                                    style="
+                                      position: absolute;
+                                      top: 0;
+                                      bottom: 0;
+                                      right: 0;
+                                      left: 0;
+                                      /* height: 100%; */
+                                      /* width: 100%; */
+                                      /* border-radius: 50%; */
+                                      background-color: rgb(255 0 0 / 50%);
+                                      z-index: 2;
+                                    "
+                                  ></div>
                                   <picture
                                     ><source
                                       srcset="
