feat(contestants): week 4 eliminations

--- a/index.html
+++ b/index.html
@@ -969,6 +969,21 @@
                                   class="RatioFrame aspect-ratio--16x9"
                                 ></div>
                                 <div class="Image__Wrapper aspect-ratio--child">
+                                  <div
+                                    class="overlay"
+                                    style="
+                                      position: absolute;
+                                      top: 0;
+                                      bottom: 0;
+                                      right: 0;
+                                      left: 0;
+                                      /* height: 100%; */
+                                      /* width: 100%; */
+                                      /* border-radius: 50%; */
+                                      background-color: rgb(255 0 0 / 50%);
+                                      z-index: 2;
+                                    "
+                                  ></div>
                                   <picture
                                     ><source
                                       srcset="
@@ -1194,6 +1209,21 @@
                                   class="RatioFrame aspect-ratio--16x9"
                                 ></div>
                                 <div class="Image__Wrapper aspect-ratio--child">
+                                  <div
+                                    class="overlay"
+                                    style="
+                                      position: absolute;
+                                      top: 0;
+                                      bottom: 0;
+                                      right: 0;
+                                      left: 0;
+                                      /* height: 100%; */
+                                      /* width: 100%; */
+                                      /* border-radius: 50%; */
+                                      background-color: rgb(255 0 0 / 50%);
+                                      z-index: 2;
+                                    "
+                                  ></div>
                                   <picture
                                     ><source
                                       srcset="
@@ -1264,6 +1294,21 @@
                                   class="RatioFrame aspect-ratio--16x9"
                                 ></div>
                                 <div class="Image__Wrapper aspect-ratio--child">
+                                  <div
+                                    class="overlay"
+                                    style="
+                                      position: absolute;
+                                      top: 0;
+                                      bottom: 0;
+                                      right: 0;
+                                      left: 0;
+                                      /* height: 100%; */
+                                      /* width: 100%; */
+                                      /* border-radius: 50%; */
+                                      background-color: rgb(255 0 0 / 50%);
+                                      z-index: 2;
+                                    "
+                                  ></div>
                                   <picture
                                     ><source
                                       srcset="
@@ -2664,6 +2709,21 @@
                                   class="RatioFrame aspect-ratio--16x9"
                                 ></div>
                                 <div class="Image__Wrapper aspect-ratio--child">
+                                  <div
+                                    class="overlay"
+                                    style="
+                                      position: absolute;
+                                      top: 0;
+                                      bottom: 0;
+                                      right: 0;
+                                      left: 0;
+                                      /* height: 100%; */
+                                      /* width: 100%; */
+                                      /* border-radius: 50%; */
+                                      background-color: rgb(255 0 0 / 50%);
+                                      z-index: 2;
+                                    "
+                                  ></div>
                                   <div
                                     class="overlay"
                                     style="
